src/components/KitsuAnimeItem/KitsuAnimeItem.css
.container2 {
    position: relative;
    /* width: 50%; */
    margin:auto;
  }
  
  .image {
    display: block;
    width: 100%;
    height: auto;
  }
  
  .overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 14px;
    right: 0;
    height: 99%;
    width: 94%;
    opacity: 0;
    transition: .5s ease;
    background-color: #0000004d;
  }

  .overlay .genre{
    font-size: 20px;
  }
  
  .container2:hover .overlay {
    opacity: 1;
  }
  
  .text {
    color: white;
    font-size: 40px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    overflow-x: hidden;
  }

  .genre, .rating{
      color:white;
      font-size: 25px;
  }

 .titles{
     /* color:grey; */
     font-family: 'Modak', cursive;
     color:black;
     text-shadow: 0px 3px #FF0000,  3px 0px#00e1ffd8;;
 }

 .pop-out{
    height: 100%;
    width: 80%100%;
    position: fixed;
    z-index: 1;
    top: 160px;
    bottom: 102px;
    /* left: 195px; */
    background-color: rgba(228, 34, 34, 0.774);
    overflow-x: hidden;
    transition: 0.5s;
     padding-top: 60px;
     margin: auto;
    margin-left: auto;
    margin-right: auto;
 }

 .pop-out .episodes{
   padding-bottom: 15%;
 }

 .desc{
     color:white;
     font-size:30px;
     margin:auto 6em;
 }
 .expand{
  padding: 0;
  border: none;
  background: none;
  font-size:30px;

 }

 .animeName{
  text-shadow: 0px 3px #FF0000,  3px 0px #00e1ffd8;;
 }

.expanded-anime-genre-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin: auto 6em;
}

.genre {
  margin: 4px  10px 4px 10px !important;
}


 /* .animeImg{
 
  margin-left: -61px;

} */

 /* @media all and (min-width:1200px) {
   body {
     margin:auto;
     background-color: green;
   }
 } */

